# ocb-dc-ose-2021

./: .buildinfo  .gitignore  LICENSE  README.md  dvc.yaml  env-s3.yaml  genindex.html  input_data_pipeline.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  metrics_pipeline.html  notebooks.html  objects.inv  ocb_dc_ose_2021_data.html  ocb_dc_ose_2021_global.html  ocb_dc_ose_2021_oi.html  oost_dc_ose_2021_data.html  oost_dc_ose_2021_global.html  oost_dc_ose_2021_oi.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: compute_metrics.yaml
.ipynb_checkpoints/: ocb_dc_ose_2021_oi-checkpoint.html
_modules/: index.html
_sources/: input_data_pipeline.md  installation.md  intro.md  ocb_dc_ose_2021_data.ipynb  ocb_dc_ose_2021_data.md  ocb_dc_ose_2021_global.ipynb  ocb_dc_ose_2021_global.md  ocb_dc_ose_2021_oi.ipynb  ocb_dc_ose_2021_oi.md  oost_dc_ose_2021_data.ipynb  oost_dc_ose_2021_data.md  oost_dc_ose_2021_global.ipynb  oost_dc_ose_2021_global.md  oost_dc_ose_2021_oi.ipynb  oost_dc_ose_2021_oi.md
_sources/autoapi/: index.rst
api/oost_dc_ose_2021/: index.html
autoapi/: index.html
autoapi/oost_dc_ose_2021/: index.html
datachallenge/: .gitignore  dvc.yaml  full_config.yaml  leaderboard.md  methods.toml
datachallenge/scripts/: format_metrics.py
docs/: .gitignore  _config.yml  _toc.yml  doc-envs.yaml  installation.md  intro.md  metrics_pipeline.md  ocb_dc_ose_2021_data.md  ocb_dc_ose_2021_global.md  ocb_dc_ose_2021_oi.md  oost_dc_ose_2021_data.md  oost_dc_ose_2021_global.md  oost_dc_ose_2021_oi.md
envs/: base.yaml  dc-dev-no-deps.yaml  dc-dev.yaml  dc.yaml  docs-build.yaml  docs.yaml  dvc-no-s3.yaml  dvc-s3.yaml  dvc.yaml  ipykernel.yaml
leaderboard/: README.md  dvc.yaml  full_config.yaml  methods.toml
leaderboard/scripts/: wrap_yaml.py
ocb_dc_ose_2021/mods/: cmems_get.py  interp_on_track.py  lambdax.py  mu.py  prepare_track.py
(+52 files in other folders)
