[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dc_ose_2021"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
dependencies = [ "aprl-core" ]


[project.urls]
Repository = "https://github.com/quentinf00/ocb-dc-ose-2021.git"


[project.scripts]
dc_ose_2021-input_data = "ocb_dc_ose_2021.input_data:pipeline"
dc_ose_2021-metrics = "ocb_dc_ose_2021.metrics:pipeline"

[tool.setuptools]
packages=["ocb_dc_ose_2021"]
