[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "ocb-dc-ose-2021"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
dependencies = [
	"aprl",
	"copernicusmarine",
]


[project.urls]
Repository = "https://github.com/quentinf00/ocb-dc-ose-2021.git"


[project.scripts]
ocb-dc_ose_2021-input_data = "ocb_dc_ose_2021.pipelines.input_data:pipeline"
ocb-dc_ose_2021-metrics = "ocb_dc_ose_2021.pipelines.metrics:pipeline"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "ocb_dc_ose_2021.__version__"}
