[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "oost-demo-ssh-dc"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
dependencies = [
	"aprl",
	"copernicusmarine",
]


[project.urls]
Repository = "https://github.com/quentinf00/oost-demo-ssh-dc.git"


[project.scripts]
oost-dc_ose_2021-input_data = "oost_dc_ose_2021.pipelines.input_data:pipeline"
oost-dc_ose_2021-metrics = "oost_dc_ose_2021.pipelines.metrics:pipeline"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "oost_dc_ose_2021.__version__"}
